@@ -52,6 +52,9 @@ char_symbol: #
 // Displays a list of @ commands available to the player.
 commands: 1,1
 
+// Displays a list of # commands available to the player.
+charcommands: 1,1
+
 // Displays the server rates.
 rates: 1,1
 
